--- a/index.html
+++ b/index.html
@@ -10,34 +10,39 @@
   
   <div class="calculator">
     <div class="screen">
-
+      <div class="lcd">
+        <div id="operation" class="exhibOperation"></div>
+        <div id="figures" class="exhibFigures"></div>
+      </div>
     </div>
     <div class="keyboard">
       <div class="row1">
-        <div class="key">7</div>
-        <div class="key">8</div>
-        <div class="key">9</div>
-        <div class="key">+</div>
+        <div onclick="pressKey('7')" class="key">7</div>
+        <div onclick="pressKey('8')" class="key">8</div>
+        <div onclick="pressKey('9')" class="key">9</div>
+        <div onclick="pressKey('+')" class="key">+</div>
       </div>
       <div class="row2">
-        <div class="key">4</div>
-        <div class="key">5</div>
-        <div class="key">6</div>
-        <div class="key">-</div>
+        <div onclick="pressKey('4')" class="key">4</div>
+        <div onclick="pressKey('5')" class="key">5</div>
+        <div onclick="pressKey('6')" class="key">6</div>
+        <div onclick="pressKey('-')" class="key">-</div>
       </div>
       <div class="row3">
-        <div class="key">1</div>
-        <div class="key">2</div>
-        <div class="key">3</div>
-        <div class="key">*</div>
+        <div onclick="pressKey('1')" class="key">1</div>
+        <div onclick="pressKey('2')" class="key">2</div>
+        <div onclick="pressKey('3')" class="key">3</div>
+        <div onclick="pressKey('*')" class="key">*</div>
       </div>
       <div class="row4">
-        <div class="key">0</div>
-        <div class="key">.</div>
-        <div class="key">C</div>
-        <div class="key">/</div>
+        <div onclick="pressKey('0')" class="key">0</div>
+        <div onclick="pressKey('.')" class="key">.</div>
+        <div onclick="pressKey('C')" class="key">C</div>
+        <div onclick="pressKey('/')" class="key">/</div>
       </div>
-      <div class="rowFinal">=</div>
+      <div class="finalRow">
+        <div onclick="pressKey('=')" class="key=">=</div>
+      </div>
     </div>
   </div>
 
