--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <div class="calculator">
     <div class="screen">
       <div class="lcd">
-        <div id="operation" class="exhibOperation"></div>
-        <div id="figures" class="exhibFigures"></div>
+        <div id="operation" class="exhibOperation"></div>       <!-- Where we show the operation to be carried out. -->
+        <div id="figures" class="exhibFigures"></div>           <!-- Where we show the numbers of the operation. -->
       </div>
     </div>
     <div class="keyboard">
